--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
 	},
 	"dependencies": {
 		"lodash": "^4.17.4",
+		"prop-types": "^15.5.10",
 		"react": "16.0.0-alpha.12",
 		"react-native": "0.45.1",
+		"react-native-sentry": "^0.14.6",
 		"react-navigation": "^1.0.0-beta.11"
 	},
 	"devDependencies": {
@@ -25,7 +27,8 @@
 		"eslint-plugin-react": "^7.1.0",
 		"eslint-plugin-react-native": "^2.3.2",
 		"jest": "20.0.4",
-		"react-test-renderer": "16.0.0-alpha.12"
+		"react-test-renderer": "16.0.0-alpha.12",
+		"sentry-cli-binary": "^1.17.0"
 	},
 	"jest": {
 		"preset": "react-native",
