--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -72,8 +72,14 @@ import com.android.build.OutputFile
  * ]
  */
 
+project.ext.envConfigFiles = [
+     debug: ".env.dev",
+     release: ".env.prod",
+     anycustombuildlowercase: ".env",
+]
+
+apply from: project(':react-native-config').projectDir.getPath() + "/dotenv.gradle"
 apply from: "../../node_modules/react-native/react.gradle"
-apply from: "../../node_modules/react-native-sentry/sentry.gradle"
 
 /**
  * Set this to true to create two separate APKs instead of one:
@@ -112,12 +118,21 @@ android {
             include "armeabi-v7a", "x86"
         }
     }
-    buildTypes {
-        release {
-            minifyEnabled enableProguardInReleaseBuilds
-            proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
+    signingConfigs {
+            release {
+                storeFile file('../keystores/formation-key.keystore')
+                storePassword ANDROID_STORE_PASSWORD                            // Nous allons configurer cette variable sur notre poste dans le fichier ~/.gradle/gradle.properties
+                keyAlias 'formation'
+                keyPassword ANDROID_KEY_PASSWORD                                // Nous allons configurer cette variable sur notre poste dans le fichier ~/.gradle/gradle.properties
+            }
         }
-    }
+        buildTypes {
+            release {
+                minifyEnabled enableProguardInReleaseBuilds
+                proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
+                signingConfig signingConfigs.release
+            }
+        }
     // applicationVariants are e.g. debug, release
     applicationVariants.all { variant ->
         variant.outputs.each { output ->
@@ -134,7 +149,7 @@ android {
 }
 
 dependencies {
-    compile project(':react-native-sentry')
+    compile project(':react-native-config')
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:23.0.1"
     compile "com.facebook.react:react-native:+"  // From node_modules
