--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -18,3 +18,6 @@
 # org.gradle.parallel=true
 
 android.useDeprecatedNdk=true
+
+ANDROID_STORE_PASSWORD=formationfastlane
+ANDROID_KEY_PASSWORD=formationfastlane
