--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,5 +1,5 @@
 rootProject.name = 'ReactNativeSample'
-include ':react-native-sentry'
-project(':react-native-sentry').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-sentry/android')
+include ':react-native-config'
+project(':react-native-config').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-config/android')
 
 include ':app'
