--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"prop-types": "^15.5.10",
 		"react": "16.0.0-alpha.12",
 		"react-native": "0.45.1",
+		"react-native-config": "^0.5.0",
 		"react-native-sentry": "^0.14.6",
 		"react-navigation": "^1.0.0-beta.11"
 	},
